manifest/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Attachment_Parent_Record_Id__c</fullName>
        <label>Attachment Parent Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>Reference to converted AttachmentId</description>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedDate__c</fullName>
        <description>The created Date of the Legacy Note Converted</description>
        <label>LegacyNoteConvertedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedId__c</fullName>
        <label>LegacyNoteConvertedId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedLastModifiedDateTime__c</fullName>
        <label>LegacyNoteConvertedLastModifiedDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedLastModifiedDate__c</fullName>
        <label>LegacyNoteConvertedLastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedOwnerId__c</fullName>
        <label>LegacyNoteConvertedOwnerId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedParentId__c</fullName>
        <label>LegacyNoteConvertedParentId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFMC_Id__c</fullName>
        <label>SFMC Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Agreements</fullName>
        <active>true</active>
        <label>Agreements</label>
    </recordTypes>
</CustomObject>